--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <nav class="hidden md:flex items-center space-x-8 font-semibold text-gray-700">
     <a href="#" onclick="location.reload();" class="hover:text-yellow-500">Home</a>
     <a href="#categories" class="hover:text-yellow-500">Categories</a>
-    <a href="support.html" class="hover:text-yellow-500">Support</a>
+    <a href="/Support" class="hover:text-yellow-500">Support</a>
     <button onclick="window.location.href='login.html'" class="ml-4 bg-yellow-500 hover:bg-yellow-600 p-2 rounded-full shadow-md flex items-center justify-center">
       <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.121 17.804A8.962 8.962 0 0112 15c2.486 0 4.737.992 6.379 2.604M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
