--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div id="mobile-menu" class="hidden absolute top-14 right-2 w-56 rounded-xl bg-white shadow-xl text-center py-4 space-y-3 z-50">
       <a href="#" onclick="location.reload();" class="block text-gray-800 font-medium hover:bg-gray-100 py-2 rounded">Home</a>
       <a href="#categories" class="block text-gray-800 font-medium hover:bg-gray-100 py-2 rounded">Categories</a>
-      <a href="support.html" class="block text-gray-800 font-medium hover:bg-gray-100 py-2 rounded">Support</a>
+      <a href="/Support" class="block text-gray-800 font-medium hover:bg-gray-100 py-2 rounded">Support</a>
       <a href="login.html" class="block text-yellow-600 font-medium hover:bg-yellow-100 py-2 rounded">Login</a>
     </div>
   </div>
