--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <nav class="hidden md:flex items-center space-x-8 font-semibold text-gray-700">
     <a href="#" onclick="location.reload();" class="hover:text-yellow-500">Home</a>
     <a href="#categories" class="hover:text-yellow-500">Categories</a>
-    <a href="/Support" class="hover:text-yellow-500">Support</a>
+    <a href="/Sign-Laser/Support" class="hover:text-yellow-500">Support</a>
     <button onclick="window.location.href='login.html'" class="ml-4 bg-yellow-500 hover:bg-yellow-600 p-2 rounded-full shadow-md flex items-center justify-center">
       <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.121 17.804A8.962 8.962 0 0112 15c2.486 0 4.737.992 6.379 2.604M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
@@ -71,7 +71,7 @@
     <div id="mobile-menu" class="hidden absolute top-14 right-2 w-56 rounded-xl bg-white shadow-xl text-center py-4 space-y-3 z-50">
       <a href="#" onclick="location.reload();" class="block text-gray-800 font-medium hover:bg-gray-100 py-2 rounded">Home</a>
       <a href="#categories" class="block text-gray-800 font-medium hover:bg-gray-100 py-2 rounded">Categories</a>
-      <a href="/Support" class="block text-gray-800 font-medium hover:bg-gray-100 py-2 rounded">Support</a>
+      <a href="/Sign-Laser/Support" class="block text-gray-800 font-medium hover:bg-gray-100 py-2 rounded">Support</a>
       <a href="login.html" class="block text-yellow-600 font-medium hover:bg-yellow-100 py-2 rounded">Login</a>
     </div>
   </div>
