--- a/Support/index.html
+++ b/Support/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Support - Sign and Laser</title>
-  <link href="../style.css" rel="stylesheet" />
+  <link href="/style.css" rel="stylesheet" />
   <style>
     body {
       background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
