--- a/Support/index.html
+++ b/Support/index.html
@@ -6,9 +6,10 @@
   <title>Support - Sign and Laser</title>
   <link href="../style.css" rel="stylesheet" />
   <style>
-    body {
-      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
-    }
+  body {
+    background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+    padding-bottom: 100px; /* ✅ This adds bottom space */
+  }
 
     .fade-in {
       opacity: 0;
