--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
               <label class="block mb-1">Buying Options:</label>
               <select id="payment${i}" class="w-full border rounded p-2 mb-3">
                 <option value="whatsapp">Order via WhatsApp</option>
-                <option value="/Sign-Laser/Orders/order.html?name=${encodeURIComponent(p.name)}&price=${encodeURIComponent(p.price)}">Order via Website</option>
+                <option value="/Sign-Laser/Orders?name=${encodeURIComponent(p.name)}&price=${encodeURIComponent(p.price)}">Order via Website</option>
                 <option value="${p.amazon}">Buy on Amazon</option>
               </select>
               <button onclick="handleOrder('payment${i}')" class="w-full bg-yellow-500 hover:bg-yellow-600 text-black px-4 py-2 rounded-full">Order</button>
