--- a/Order/index.html
+++ b/Order/index.html
@@ -144,7 +144,6 @@
   const quantity = document.getElementById("quantity").value;
   const price = document.getElementById("price").value;
   const address = document.getElementById("address").value;
-  const total = price * quantity;
 
   const data = {
     name,
@@ -152,12 +151,11 @@
     product,
     quantity,
     price,
-    total,
     address
   };
 
   try {
-    await fetch("https://script.google.com/macros/s/AKfycbyxjvM2wXyynpqrs3P5p2UaHOhl2qnnT7FAc75cmZaFBR5filhJyEJF3w5OTIp0rve8/exec", {
+    await fetch("https://script.google.com/macros/s/PASTE_YOUR_SCRIPT_ID_HERE/exec", {
       method: "POST",
       body: JSON.stringify(data),
       headers: {
@@ -166,7 +164,8 @@
     });
 
     alert("✅ Order placed successfully!");
-    window.location.href = "/Sign-Laser/payment.html"; // You can change this to your success page
+    window.location.href = "/Sign-Laser/payment.html";
+
   } catch (err) {
     alert("❌ Failed to place order. Please try again.");
     console.error(err);
